[package]
name = "harp"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "harp"
path = "src/lib.rs"

[[bin]]
name = "harpd"
path = "bin/src/main.rs"

[dependencies]
bufferfish = { path = "../bufferfish/bufferfish-rs", version = "0.1.0", features = [
    "impl-bytes",
] }
flume = "0.10"
futures-lite = { version = "1", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
tokio = { version = "1", default-features = false, features = ["macros"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
time = "0.3"
serde_json = "1"
stubborn-io = "0.3"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "ipnetwork",
    "migrate",
] }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "env-filter",
    "ansi",
] }


[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
