[package]
name = "harp"
authors = ["Rob Wagner <rob@sombia.com>"]
repository = "https://github.com/robertwayne/harp"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "harp"
path = "src/lib.rs"

[[bin]]
name = "harpd"
path = "bin/src/main.rs"
required-features = ["bin"]

[features]
default = []
bin = ["serde", "pico-args", "toml"]

[dependencies]
# Core Dependencies
bufferfish = { path = "../bufferfish/bufferfish-rs", version = "0.1", features = [
    "impl-bytes",
] }
flume = { version = "0.11" }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
serde_json = { version = "1" }
stubborn-io = { version = "0.3" }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "ipnetwork",
] }
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Binary Dependencies
serde = { version = "1", features = ["derive"], optional = true }
pico-args = { version = "0.5", optional = true }
toml = { version = "0.8", default-features = false, optional = true, features = [
    "parse",
] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
